# dptf

./: .gitignore  Android.mk  LICENSE.txt  README.txt  pack.sh
Common/: Ver.h  esif_ccb.h  esif_ccb_atomic.h  esif_ccb_atomic_lin_user.h  esif_ccb_cpuid.h  esif_ccb_cpuid_lin_user.h  esif_ccb_env.h  esif_ccb_file.h  esif_ccb_file_lin_user.h  esif_ccb_kpe.h  esif_ccb_library.h  esif_ccb_library_lin_user.h  esif_ccb_lock.h  esif_ccb_lock_lin_user.h  esif_ccb_memory.h  esif_ccb_memory_lin_user.h  esif_ccb_memstat.h  esif_ccb_memtrace.h  esif_ccb_random.h  esif_ccb_random_lin_user.h  esif_ccb_rc.h  esif_ccb_sem.h  esif_ccb_sem_lin_user.h  esif_ccb_socket.h  esif_ccb_socket_lin_user.h  esif_ccb_sort.h  esif_ccb_sort_lin_user.h  esif_ccb_string.h  esif_ccb_string_lin_user.h  esif_ccb_thread.h  esif_ccb_thread_lin_user.h  esif_ccb_time.h  esif_ccb_time_lin_user.h  esif_ccb_timer.c  esif_ccb_timer.h  esif_ccb_timer_lin_user.h  esif_link_list.c  esif_link_list.h  esif_queue.c  esif_queue.h  (+38 more)
DPTF/: .clang-format
DPTF/Androidx86/jni/: Android.mk  Application.mk
DPTF/Linux/: CMakeLists.txt  eclipseSetup
DPTF/Linux/Libraries/: CMakeLists.txt
DPTF/Linux/Libraries/ConfigurationFileContent/: CMakeLists.txt
DPTF/Linux/Libraries/FileIo/: CMakeLists.txt
DPTF/Linux/Libraries/LzmaDataCompressor/: CMakeLists.txt
DPTF/Linux/Libraries/NeuralNetPid/: CMakeLists.txt
DPTF/Linux/Manager/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/Policies/: CMakeLists.txt
DPTF/Linux/Policies/ActivePolicy/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/Policies/CriticalPolicy/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/Policies/PassivePolicy/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/Policies/PolicyLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/BasicTypesLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/DptfObjectsLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/DptfTypesLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/EsifTypesLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/EventsLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/MessageLoggingLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/ParticipantControlsLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/ParticipantLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/ResourceLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/SharedLib/XmlLib/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Linux/UnifiedParticipant/: CMakeLists.txt  Makefile  cmake_install.cmake
DPTF/Sources/: .clang-format  DptfVer.h  Ver.h  combined.xsl
DPTF/Sources/Common/: DataCompressor.h
DPTF/Sources/EsifSdk/: esif.h  esif_basic_types.h  esif_ccb.h  esif_ccb_sem.h  esif_ccb_time.h  esif_ccb_timer.h  esif_data.h  esif_data_misc.h  esif_data_type.h  esif_debug.h  esif_mempool.h  esif_memtype.h  esif_participant_enum.h  esif_participant_iface.h  esif_primitive_type.h  esif_rc.h  esif_uf.h  esif_uf_app_iface.h  esif_uf_ccb_file.h  esif_uf_ccb_library.h  esif_uf_ccb_thread.h  esif_uf_conjure_iface.h  esif_uf_esif_iface.h  esif_uf_iface.h
DPTF/Sources/Manager/: ActiveControlArbitrator.cpp  ActiveControlArbitrator.h  ApplicationTimerSettings.cpp  ApplicationTimerSettings.h  Arbitrator.cpp  Arbitrator.h  ArbitratorOscRequest.cpp  ArbitratorOscRequest.h  CaptureCommand.cpp  CaptureCommand.h  CaptureDataGenerator.cpp  CaptureDataGenerator.h  CommandArgument.cpp  CommandArgument.h  CommandArguments.cpp  CommandArguments.h  CommandDispatch.cpp  CommandDispatch.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandHandler.cpp  CommandHandler.h  Commands.h  ConfigCommand.cpp  ConfigCommand.h  ConfigDeleteCommand.cpp  ConfigDeleteCommand.h  ConfigFilterDbCommand.cpp  ConfigFilterDbCommand.h  ConfigListCommand.cpp  ConfigListCommand.h  ConfigPrintAllCommand.cpp  ConfigPrintAllCommand.h  ConfigPrintCommand.cpp  ConfigPrintCommand.h  ConfigPrintDbCommand.cpp  ConfigPrintDbCommand.h  ConfigReloadCommand.cpp  ConfigReloadCommand.h  ConfigTdpControlArbitrator.cpp  (+691 more)
DPTF/Sources/SharedLib/: AcpiInfo.cpp  AcpiInfo.h  AcpiObjectsActive.h  AcpiObjectsCtdp.h  AcpiObjectsDisplay.h  AcpiObjectsFan.h  AcpiObjectsGeneric.h  AcpiObjectsLpm.h  AcpiObjectsPassive.h  AcpiObjectsProcessor.h  ActiveControlSet.cpp  ActiveControlSet.h  ActiveControlStaticCaps.cpp  ActiveControlStaticCaps.h  ActiveControlStatus.h  ActiveRelationshipTable.cpp  ActiveRelationshipTable.h  ActiveRelationshipTableEntry.cpp  ActiveRelationshipTableEntry.h  Base64.cpp  Base64.h  BasicTypes.h  BinaryParse.cpp  BinaryParse.h  BusType.cpp  BusType.h  CachedValue.h  ConfigTdpControl.cpp  ConfigTdpControl.h  ConfigTdpControlDynamicCaps.cpp  ConfigTdpControlDynamicCaps.h  ConfigTdpControlSet.h  ConfigTdpControlStatus.h  Constants.h  ControlKnobType.cpp  ControlKnobType.h  (+203 more)
IPF/Linux/: Makefile
Products/DPTF/Linux/: CMakeLists.txt
Products/DPTF/Linux/Manager/: CMakeLists.txt
Products/DPTF/Linux/Manager/Manager/: CMakeLists.txt
Products/DPTF/Linux/Policies/: CMakeLists.txt
Products/DPTF/Linux/Policies/ActivePolicy/: CMakeLists.txt
Products/DPTF/Linux/Policies/ActivePolicy/ActivePolicy/: CMakeLists.txt
Products/DPTF/Linux/Policies/CriticalPolicy/: CMakeLists.txt
Products/DPTF/Linux/Policies/CriticalPolicy/CriticalPolicy/: CMakeLists.txt
Products/DPTF/Linux/Policies/PassivePolicy/: CMakeLists.txt
Products/DPTF/Linux/Policies/PassivePolicy/PassivePolicy/: CMakeLists.txt
Products/DPTF/Linux/PolicyLib/: CMakeLists.txt
Products/DPTF/Linux/PolicyLib/PolicyLib/: CMakeLists.txt
Products/DPTF/Linux/SharedLib/: CMakeLists.txt  manual.txt  notes.txt
Products/DPTF/Linux/SharedLib/SharedLib/: CMakeLists.txt
Products/DPTF/Linux/UnifiedParticipant/: CMakeLists.txt
Products/DPTF/Linux/UnifiedParticipant/UnifiedParticipant/: CMakeLists.txt
(+2293 files in other folders)
