if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(..)
        include_directories(../../../Common)
        include_directories(../Common)
        include_directories(../ThirdParty)
        include_directories(.)
        include_directories(./ConfigurationFileContent)
        include_directories(./FileIo)
        include_directories(./LzmaDataCompressor)
        include_directories(./LzmaDataCompressor/lzma)
        file(GLOB_RECURSE libraries_SOURCES "*.cpp")
else ()
        include_directories(../../Sources)
        include_directories(../../../Common)
        include_directories(../../Sources/Common)
        include_directories(../../Sources/ThirdParty)
        include_directories(../../Sources/Libraries)
        include_directories(../../Sources/Libraries/ConfigurationFileContent)
        include_directories(../../Sources/Libraries/FileIo)
        include_directories(../../Sources/Libraries/LzmaDataCompressor)
        include_directories(../../Sources/Libraries/LzmaDataCompressor/lzma)
        file(GLOB_RECURSE libraries_SOURCES "../../Sources/Libraries/*.cpp")
endif()

add_subdirectory(ConfigurationFileContent)
add_subdirectory(FileIo)
add_subdirectory(LzmaDataCompressor)

add_library(${LIBRARIES} STATIC ${libraries_SOURCES})

set_target_properties(${LIBRARIES} PROPERTIES PREFIX "")

