if (IN_SOURCE_BUILD MATCHES YES)
	include_directories(..)
	include_directories(../EsifSdk)
	include_directories(../ThirdParty)
	include_directories(../SharedLib)
	include_directories(../Policies/PolicyLib)
else ()
	include_directories(../../Sources)
	include_directories(../../Sources/EsifSdk)
	include_directories(../../Sources/ThirdParty)
	include_directories(../../Sources/SharedLib)
	include_directories(../../Sources/Policies/PolicyLib)
endif()

set(POLICY_LIB "DptfPolicyLib")

add_subdirectory(PolicyLib)
add_subdirectory(CriticalPolicy)
add_subdirectory(PassivePolicy)
add_subdirectory(ActivePolicy)
