if (IN_SOURCE_BUILD MATCHES YES)
	include_directories(..)
	include_directories(../../../Common)
	include_directories(../ThirdParty)
	include_directories(../SharedLib)
	include_directories(../SharedLib/BasicTypesLib)
	include_directories(../SharedLib/EsifTypesLib)
	include_directories(../SharedLib/DptfTypesLib)
	include_directories(../Sources/SharedLib/DptfObjectsLib)
	include_directories(../Sources/SharedLib/ParticipantControlsLib)
	include_directories(../Sources/SharedLib/ParticipantLib)
	include_directories(../Sources/SharedLib/EventsLib)
	include_directories(../Sources/SharedLib/MessageLoggingLib)
	include_directories(../Sources/SharedLib/XmlLib)
	include_directories(../Policies/PolicyLib)
else ()
	include_directories(../../Sources)
	include_directories(../../../Common)
	include_directories(../../Sources/ThirdParty)
	include_directories(../../Sources/SharedLib)
	include_directories(../../Sources/SharedLib/BasicTypesLib)
	include_directories(../../Sources/SharedLib/EsifTypesLib)
	include_directories(../../Sources/SharedLib/DptfTypesLib)
	include_directories(../../Sources/SharedLib/DptfObjectsLib)
	include_directories(../../Sources/SharedLib/ParticipantControlsLib)
	include_directories(../../Sources/SharedLib/ParticipantLib)
	include_directories(../../Sources/SharedLib/EventsLib)
	include_directories(../../Sources/SharedLib/MessageLoggingLib)
	include_directories(../../Sources/SharedLib/XmlLib)
	include_directories(../../Sources/Policies/PolicyLib)
endif()

set(POLICY_LIB "DptfPolicyLib")

add_subdirectory(PolicyLib)
add_subdirectory(CriticalPolicy)
add_subdirectory(PassivePolicy)
add_subdirectory(ActivePolicy)
