if (IN_SOURCE_BUILD MATCHES YES)
	include_directories(..)
	include_directories(../../../Common)
	include_directories(../ThirdParty)
	include_directories(../Libraries/ConfigurationFileContent)
	include_directories(../SharedLib)
	include_directories(../SharedLib/BasicTypesLib)
	include_directories(../SharedLib/EsifTypesLib)
	include_directories(../SharedLib/DptfTypesLib)
	include_directories(../SharedLib/DptfObjectsLib)
	include_directories(../SharedLib/ParticipantControlsLib)
	include_directories(../SharedLib/ParticipantLib)
	include_directories(../SharedLib/EventsLib)
	include_directories(../SharedLib/MessageLoggingLib)
	include_directories(../SharedLib/XmlLib)
	include_directories(../Policies/ConditionalLogicLib)
	include_directories(../Policies/PolicyLib)
	include_directories(../Policies/SystemConfigurationFeaturesLogic)
	include_directories(../Policies/PassivePolicy2Logic)
	include_directories(../Policies/AdaptivePerformancePolicyLogic)
	include_directories(../Policies/EnergyPerformanceOptimizerPolicyLogic)
	include_directories(../Policies/RfimPolicyLogic)
	include_directories(../Policies/IntelligentThermalManagementPolicyLogic)
	include_directories(../Policies/ThirdPartyGraphicsPolicyLogic)
	include_directories(../Policies/PowerSharePolicy2Logic)
	include_directories(../Policies/OpportunisticBoostPolicyLogic)
else ()
	include_directories(../../Sources)
	include_directories(../../../Common)
	include_directories(../../Sources/ThirdParty)
	include_directories(../../Sources/Libraries/ConfigurationFileContent)
	include_directories(../../Sources/SharedLib)
	include_directories(../../Sources/SharedLib/BasicTypesLib)
	include_directories(../../Sources/SharedLib/EsifTypesLib)
	include_directories(../../Sources/SharedLib/DptfTypesLib)
	include_directories(../../Sources/SharedLib/DptfObjectsLib)
	include_directories(../../Sources/SharedLib/ParticipantControlsLib)
	include_directories(../../Sources/SharedLib/ParticipantLib)
	include_directories(../../Sources/SharedLib/EventsLib)
	include_directories(../../Sources/SharedLib/MessageLoggingLib)
	include_directories(../../Sources/SharedLib/XmlLib)
	include_directories(../../Sources/Policies/ConditionalLogicLib)
	include_directories(../../Sources/Policies/PolicyLib)
	include_directories(../../Sources/Policies/SystemConfigurationFeaturesLogic)
	include_directories(../../Sources/Policies/PassivePolicy2Logic)
	include_directories(../../Sources/Policies/AdaptivePerformancePolicyLogic)
	include_directories(../../Sources/Policies/EnergyPerformanceOptimizerPolicyLogic)
	include_directories(../../Sources/Policies/RfimPolicyLogic)
	include_directories(../../Sources/Policies/IntelligentThermalManagementPolicyLogic)
	include_directories(../../Sources/Policies/ThirdPartyGraphicsPolicyLogic)
	include_directories(../../Sources/Policies/PowerSharePolicy2Logic)
	include_directories(../../Sources/Policies/OpportunisticBoostPolicyLogic)
endif()

set(POLICY_LIB "DptfPolicyLib")
set(CONDITIONAL_LOGIC_LIB "DptfConditionalLogicLib")

add_subdirectory(PolicyLib)
add_subdirectory(ActivePolicy)
add_subdirectory(CriticalPolicy)
add_subdirectory(PassivePolicy)
