if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(..)
        include_directories(../../../Common)
        include_directories(../ThirdParty)
		include_directories(.)
		include_directories(./BasicTypesLib)
		include_directories(./EsifTypesLib)
		include_directories(./DptfTypesLib)
		include_directories(./DptfObjectsLib)
		include_directories(./ParticipantControlsLib)
		include_directories(./ParticipantLib)
		include_directories(./EventsLib)
		include_directories(./MessageLoggingLib)
		include_directories(./XmlLib)
        file(GLOB_RECURSE shared_lib_SOURCES "*.cpp")
else ()
        include_directories(../../Sources)
        include_directories(../../../Common)
        include_directories(../../Sources/ThirdParty)
		include_directories(../../Sources/SharedLib)
		include_directories(../../Sources/SharedLib/BasicTypesLib)
		include_directories(../../Sources/SharedLib/EsifTypesLib)
		include_directories(../../Sources/SharedLib/DptfTypesLib)
		include_directories(../../Sources/SharedLib/DptfObjectsLib)
		include_directories(../../Sources/SharedLib/ParticipantControlsLib)
		include_directories(../../Sources/SharedLib/ParticipantLib)
		include_directories(../../Sources/SharedLib/EventsLib)
		include_directories(../../Sources/SharedLib/MessageLoggingLib)
		include_directories(../../Sources/SharedLib/XmlLib)
        file(GLOB_RECURSE shared_lib_SOURCES "../../Sources/SharedLib/*.cpp")
endif()

add_subdirectory(BasicTypesLib)
add_subdirectory(EsifTypesLib)
add_subdirectory(DptfTypesLib)
add_subdirectory(DptfObjectsLib)
add_subdirectory(ParticipantControlsLib)
add_subdirectory(ParticipantLib)
add_subdirectory(EventsLib)
add_subdirectory(MessageLoggingLib)
add_subdirectory(XmlLib)

add_library(${SHARED_LIB} STATIC ${shared_lib_SOURCES})

set_target_properties(${SHARED_LIB} PROPERTIES PREFIX "")

